# DocChat

./: .gitignore  README.md  config.yaml  docchat.db  local_cli_doc_chat_specs.md  local_cli_doc_chat_tasks.md  pyproject.toml  requirements.txt
chat_history/: chat_history_2025-08-06.txt
docchat/: __init__.py  app.py  chunking.py  config.py  database.py  document_loader.py  embeddings.py  llm.py  logging_setup.py  main.py  model_downloader.py  rag_pipeline.py
docs/: test.unsupported  test_doc.csv  test_doc.md  test_doc.txt  test_history_of_the_netherlands.md
tests/: test_document_loader.py  test_rag_performance.py
