[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docchat"
version = "0.1.0"
description = "A CLI application for chatting with local documents"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "llama-cpp-python>=0.1.78",
    "pypdf>=3.0.0",
    "markdown>=3.3.0",
    "openpyxl>=3.0.0",
    "tqdm>=4.60.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
docchat = "docchat.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]